package com.tonight.app

object AppConstants {
    const val APP_NAME = "Tonight"
}
