...
}

@Preview(name = "Chip - Selected (1.0 Font Scale)", fontScale = 1.0f, showBackground = true)
@Composable
private fun ChipSelectedPreview() {
    TonightTheme {
        Chip(text = "Couple", selected = true, onClick = {})
    }
}

@Preview(name = "Chip - Unselected (1.5 Font Scale)", fontScale = 1.5f, showBackground = true)
@Composable
private fun ChipUnselectedLargeFontPreview() {
...
