...
) = SecondaryButton(text = text, onClick = onClick, modifier = modifier, enabled = enabled, contentDescription = contentDescription)

@Preview(name = "SecondaryButton - 1.0 Font Scale", fontScale = 1.0f, showBackground = true)
@Composable
private fun SecondaryButtonPreview() {
    TonightTheme {
        SecondaryButton(text = "Saved Moments", onClick = {})
    }
}

@Preview(name = "SecondaryButton - 1.5 Font Scale", fontScale = 1.5f, showBackground = true)
@Composable
private fun SecondaryButtonLargeFontPreview() {
...
